--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "Just-Tech-News",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mysql2": "^2.3.0",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -23,4 +25,5 @@
     "url": "https://github.com/umairali-bit/Just-Tech-News/issues"
   },
   "homepage": "https://github.com/umairali-bit/Just-Tech-News#readme"
+  
 }
