--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "server.js",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.4",
+    "express-session": "^1.17.2",
+    "handlebars": "^4.7.7",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5"
   },
@@ -25,5 +29,4 @@
     "url": "https://github.com/umairali-bit/Just-Tech-News/issues"
   },
   "homepage": "https://github.com/umairali-bit/Just-Tech-News#readme"
-  
 }
