--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.4",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5"
   },
@@ -25,5 +26,4 @@
     "url": "https://github.com/umairali-bit/Just-Tech-News/issues"
   },
   "homepage": "https://github.com/umairali-bit/Just-Tech-News#readme"
-  
 }
