--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^27.2.4"
+  },
   "scripts": {
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
